tests/samples/invalid/mismatched_array_length.pn
const X: [3]i32 = [1, 2];
const Y: [3]i32 = [1, 2, 3, 4];
